Fixed unread messages indicator appearing in wrong position.

--- a/assets/css/navBarStyle.css
+++ b/assets/css/navBarStyle.css
@@ -140,7 +140,7 @@
 .notification_dot{
     color: #433e3f;
     top: -6px;
-    right: -6px;
+    left: -6px;
     position: absolute;
     z-index: 1000;
     display: block;
